<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <Button
        android:id="@+id/button5"
        android:layout_width="300dp"
        android:layout_height="65dp"
        android:layout_marginBottom="47dp"
        android:layout_marginEnd="42dp"
        android:layout_marginRight="42dp"
        android:alpha="0.700"
        android:background="#77B5FE"
        android:text="@string/condition_d_utilisation"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button6"
        android:layout_width="300dp"
        android:layout_height="65dp"
        android:layout_marginBottom="29dp"
        android:layout_marginEnd="42dp"
        android:layout_marginRight="42dp"
        android:alpha="0.700"
        android:background="#E9383F"
        android:text="@string/politique_de_confidentialit"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="139dp"
        android:layout_height="42dp"
        android:layout_marginBottom="33dp"
        android:layout_marginEnd="123dp"
        android:layout_marginRight="123dp"
        android:text="@string/notification"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toStartOf="@+id/checkBox" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="139dp"
        android:layout_height="42dp"
        android:layout_marginBottom="23dp"
        android:layout_marginEnd="123dp"
        android:layout_marginRight="123dp"
        android:text="@string/son"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toStartOf="@+id/checkBox2" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="59dp"
        android:layout_marginBottom="23dp"
        android:layout_marginEnd="42dp"
        android:layout_marginRight="42dp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="59dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="42dp"
        android:layout_marginRight="42dp"
        app:layout_constraintBottom_toTopOf="@+id/checkBox"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="300dp"
        android:layout_height="65dp"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="42dp"
        android:layout_marginRight="42dp"
        android:alpha="0.700"
        android:background="#87E990"
        android:text="@string/aide_et_assistance"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="383dp"
        android:layout_height="54dp"
        android:layout_marginBottom="32dp"
        android:background="@color/colorPrimary"
        android:paddingTop="8dp"
        android:text="@string/r_glage"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/checkBox2"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>